--- a/feature/flightsearch/src/main/res/values/strings.xml
+++ b/feature/flightsearch/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_cheap_tickets">Поиск дешевых\n авиабилетов</string>
+    <string name="from_Moscow">Откуда - Москва</string>
+    <string name="to_Turkey">Куда - Турция</string>
+    <string name="musically_fly">Музыкально отлететь</string>
+    <string name="show_all_places">Показать все места</string>
+    <string name="your_first_time">Ваш первый раз</string>
+    <string name="plane_icon">plane_icon</string>
+    <string name="offer_image">Offer image</string>
 </resources>
